# CUDA

./: .gitignore  CMakeLists.txt  README.md
2/: lab01_1C.cpp  lab01_1G.cu  lab01_1G_2.cu  lab01_2.cpp  makefile
2/docs/: LR2.docx
LR02/: makefile
LR02/doc/: 2.xlsx  Grafiki.xlsx  LAB02.xlsx  PGP.Otchet_LR02.docx
LR02/src/: LR02_1C.cpp  LR02_1C_2.cpp  LR02_1G.cu  LR02_1G_2.cu  LR02_2C.cpp  LR02_2G.cu
LR03/doc/: LAB03.xlsx  PGP.Otchet_LR03.docx
LR03/src/: LR03_1.cu  LR03_1G.cu  LR03_2G.cu
LR04/doc/: PGP.Otchet_LR04.docx
LR04/src/: LR04_1G.cu
LR05/doc/: PGP.Otchet_LR05.docx
LR05/src/: LR05_1G.cu
LR07/doc/: LR_07.xlsx  PGP.Otchet_LR07.docx
LR07/src/: LR07_1G.cu  LR07_2G.cu
LR08/doc/: LR_08.xlsx  PGP.Otchet_LR08.docx
LR08/src/: LR08_1G.cu  LR08_2G.cu
LR09/doc/: LR_09.xlsx  PGP.Otchet_LR09.docx
LR09/src/: LR09_1G.cu  LR09_2G.cu  LR09_3G.cu
LR10/doc/: LR_10.xlsx  PGP.Otchet_LR10.docx
LR10/src/: LR10_1G.cu  LR10_1G.py
RGZ/doc/: PGP.RGZ.docx  PGP.RGZ.xlsx
RGZ/src/: Matrix.cpp  Multiplication.comp.glsl  OpenGL.cpp  RGZ.h  RGZ_OpenGL.cpp  main.cpp
